--- a/assets/css/components/form.scss
+++ b/assets/css/components/form.scss
@@ -413,6 +413,7 @@ a:hover {
 @media (max-width: 767px) {
 	#page-application-form .footer {
 		height: auto;
+		margin-bottom: 35px;
 
 		.footer-bav-connector {
 			width: 27px;
